tests/ui/impl-trait/in-trait/sibling-function-constraint.stderr
error[E0308]: mismatched types
  --> $DIR/sibling-function-constraint.rs:12:25
   |
LL |         let _: String = Self::bar();
   |                ------   ^^^^^^^^^^^ expected `String`, found opaque type
   |                |
   |                expected due to this
...
LL |     fn bar() -> impl Sized {
   |                 ---------- the found opaque type
   |
   = note:   expected struct `String`
           found opaque type `impl Sized`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
